--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Sankha patra",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^4.6.0",
     "connect-mongodb": "^0.4.0",
     "connect-mongodb-session": "^3.1.1",
