--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "connect-mongodb": "^0.4.0",
     "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "^1.4.5",
+    "crypto": "^1.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
     "multer": "^1.4.3",
     "node-sass-middleware": "^0.11.0",
     "passport": "^0.5.0",
+    "passport-google-oauth": "^2.0.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "python": "^0.0.4"
   }
