added chatting room

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "python": "^0.0.4"
+    "python": "^0.0.4",
+    "socket.io": "^2.2.0"
   }
 }
